--- a/helm/appset.yaml
+++ b/helm/appset.yaml
@@ -25,7 +25,7 @@ spec:
             valueFiles:
             - $values/helm/values/common/values.yaml
             - $values/helm/values/env/{{.environment}}/values.yaml  
-        - repoURL: https://github.com/<repo>
+        - repoURL: https://github.com/abu-raed/gitops-masterclass-applications-template
           targetRevision: main
           ref: values
       destination:
