--- a/impersonation/app-kuard.yaml
+++ b/impersonation/app-kuard.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: endor
   source:
-    repoURL: https://github.com/<repo>
+    repoURL: https://github.com/abu-raed/gitops-masterclass-applications-template
     targetRevision: main
     path: impersonation/manifests/
   destination:
