--- a/kustomize/appset-gobg.yaml
+++ b/kustomize/appset-gobg.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       project: default
       sources:
-        - repoURL: https://github.com/<repo>
+        - repoURL: https://github.com/abu-raed/gitops-masterclass-applications-template
           targetRevision: main
           path: 'kustomize/env/overlays/{{.environment}}'
       destination:
