--- a/kustomize/example.yaml
+++ b/kustomize/example.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
 spec:
   source:
-    repoURL: https://github.com/<repo>
+    repoURL: https://github.com/abu-raed/gitops-masterclass-applications-template
     targetRevision: main
     path: example/path
     ###
