--- a/kustomize/gobg-stage.yaml
+++ b/kustomize/gobg-stage.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/<repo>
+    repoURL: https://github.com/abu-raed/gitops-masterclass-applications-template
     targetRevision: main
     path: kustomize/env/overlays/stage/
   destination:
